Update to current git

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  ufw-0.35.tar.gz: 15bc6169e36020bd57d2ddc6ee4a0a5a31c0cfb0
+  ufw-0.36.20200125.tar.zst: 8bc32876ccf303425400969463a3b0907c4683bd
